--- a/QuickApp_iOS/QuickApp_iOS/Base.lproj/Main.storyboard
+++ b/QuickApp_iOS/QuickApp_iOS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="f7A-Sn-WyF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="f7A-Sn-WyF">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -95,7 +95,7 @@
                                             <outlet property="delegate" destination="W7b-Lx-8Us" id="uMq-ZG-tbG"/>
                                         </connections>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Room Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SM1-PA-zei">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="5ef599aaec74380858b53bcf" borderStyle="roundedRect" placeholder="Enter Room Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SM1-PA-zei">
                                         <rect key="frame" x="20" y="174" width="240" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="DWK-wL-RvC"/>
@@ -240,72 +240,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait till other participant join." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S86-Fd-4FP">
-                                <rect key="frame" x="40" y="303" width="295" height="17.5"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3V8-0P-Q9L" customClass="EnxPlayerView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5VL-d2-vpz">
-                                        <rect key="frame" x="5" y="490" width="0.0" height="0.0"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="5VL-d2-vpz" firstAttribute="leading" secondItem="3V8-0P-Q9L" secondAttribute="leading" constant="5" id="JHe-6P-6ws"/>
-                                    <constraint firstAttribute="bottom" secondItem="5VL-d2-vpz" secondAttribute="bottom" constant="133" id="WB5-p4-zZP"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5VL-d2-vpz" secondAttribute="trailing" constant="20" symbolic="YES" id="flD-9T-Owb"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="isLocalView" value="no"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="49c-qz-wFZ">
-                                <rect key="frame" x="0.0" y="369" width="375" height="100"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="IAm-fn-CQC"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="FEj-X3-Sa1">
-                                    <size key="itemSize" width="85" height="100"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customeCell" id="Isg-8O-a4A" customClass="EnxPlayerCollectionViewCell" customModule="QuickApp_iOS" customModuleProvider="target">
-                                        <rect key="frame" x="1" y="0.0" width="85" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="85" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bGa-BL-Y3E" customClass="EnxPlayerView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="85" height="100"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="string" keyPath="isLocalView" value="no"/>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                            </subviews>
-                                        </view>
-                                        <connections>
-                                            <outlet property="playerView" destination="bGa-BL-Y3E" id="TQA-cf-ix2"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="iIc-7c-ihc" id="KP4-1k-pqN"/>
-                                    <outlet property="delegate" destination="iIc-7c-ihc" id="Mdt-R6-Pp5"/>
-                                </connections>
-                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zmt-df-WtW" customClass="EnxPlayerView">
                                 <rect key="frame" x="255" y="10" width="95" height="120"/>
                                 <subviews>
@@ -438,23 +372,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="49c-qz-wFZ" firstAttribute="leading" secondItem="qcV-0N-ToM" secondAttribute="leading" id="1O9-p0-pU8"/>
                             <constraint firstItem="fSU-Zl-45h" firstAttribute="leading" secondItem="qcV-0N-ToM" secondAttribute="leading" constant="10" id="3WN-3V-ZuF"/>
                             <constraint firstItem="rKa-FZ-dJx" firstAttribute="leading" secondItem="qcV-0N-ToM" secondAttribute="leading" id="66c-Xy-nx4"/>
-                            <constraint firstItem="qcV-0N-ToM" firstAttribute="trailing" secondItem="S86-Fd-4FP" secondAttribute="trailing" constant="40" id="8gt-n2-hiE"/>
-                            <constraint firstItem="49c-qz-wFZ" firstAttribute="trailing" secondItem="qcV-0N-ToM" secondAttribute="trailing" id="EXL-Qk-1c4"/>
                             <constraint firstItem="fSU-Zl-45h" firstAttribute="top" secondItem="qcV-0N-ToM" secondAttribute="top" constant="2" id="HF5-nK-Phr"/>
                             <constraint firstItem="qcV-0N-ToM" firstAttribute="trailing" secondItem="Zmt-df-WtW" secondAttribute="trailing" constant="25" id="K3S-bg-4ob"/>
-                            <constraint firstItem="rKa-FZ-dJx" firstAttribute="top" secondItem="49c-qz-wFZ" secondAttribute="bottom" constant="19" id="LMI-4o-gnk"/>
-                            <constraint firstItem="S86-Fd-4FP" firstAttribute="leading" secondItem="qcV-0N-ToM" secondAttribute="leading" constant="40" id="RhZ-00-Gfk"/>
-                            <constraint firstItem="S86-Fd-4FP" firstAttribute="centerY" secondItem="jCG-4e-Wup" secondAttribute="centerY" id="UeW-i0-tM8"/>
                             <constraint firstItem="rKa-FZ-dJx" firstAttribute="trailing" secondItem="qcV-0N-ToM" secondAttribute="trailing" id="dPv-tK-qV4"/>
-                            <constraint firstItem="3V8-0P-Q9L" firstAttribute="leading" secondItem="qcV-0N-ToM" secondAttribute="leading" id="ees-OJ-1Yg"/>
                             <constraint firstItem="rKa-FZ-dJx" firstAttribute="bottom" secondItem="qcV-0N-ToM" secondAttribute="bottom" id="hiO-rs-rTP"/>
-                            <constraint firstItem="3V8-0P-Q9L" firstAttribute="trailing" secondItem="qcV-0N-ToM" secondAttribute="trailing" id="i03-Xe-adr"/>
                             <constraint firstItem="Zmt-df-WtW" firstAttribute="top" secondItem="qcV-0N-ToM" secondAttribute="top" constant="10" id="l9Z-In-w9S"/>
-                            <constraint firstItem="3V8-0P-Q9L" firstAttribute="bottom" secondItem="qcV-0N-ToM" secondAttribute="bottom" id="qbd-Y4-Syb"/>
-                            <constraint firstItem="3V8-0P-Q9L" firstAttribute="top" secondItem="qcV-0N-ToM" secondAttribute="top" id="qz7-B9-iSx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qcV-0N-ToM"/>
                     </view>
@@ -462,13 +386,11 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="cameraBTN" destination="dT2-Lw-EDL" id="eGn-v0-2h6"/>
-                        <outlet property="collectionView" destination="49c-qz-wFZ" id="yHA-bN-cDr"/>
                         <outlet property="localPlayerView" destination="Zmt-df-WtW" id="mAc-XE-oea"/>
-                        <outlet property="mainPlayerView" destination="3V8-0P-Q9L" id="ws4-0e-KFz"/>
-                        <outlet property="messageLBL" destination="S86-Fd-4FP" id="3Ty-Ql-jU9"/>
+                        <outlet property="optionsContainerView" destination="rKa-FZ-dJx" id="9Bu-al-A7q"/>
                         <outlet property="optionsView" destination="k5m-a3-cLi" id="QN7-lx-nBB"/>
                         <outlet property="publisherNameLBL" destination="JCW-8v-JB7" id="P62-5n-naC"/>
-                        <outlet property="subscriberNameLBL" destination="5VL-d2-vpz" id="iGe-hU-LN5"/>
+                        <outlet property="sendLogBtn" destination="fSU-Zl-45h" id="hHH-hn-MZv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ygV-tA-XW1" userLabel="First Responder" sceneMemberID="firstResponder"/>
